--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './system.json,./system.zip'
+          artifacts: './dist/system.json,./system.zip'
           tag: latest
           body: ${{ github.event.inputs.release_notes }}
 
@@ -62,6 +62,6 @@ jobs:
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './system.json,./system.zip'
+          artifacts: './dist/system.json,./system.zip'
           tag: ${{ steps.get_version.outputs.version }}
           body: ${{ github.event.inputs.release_notes }}
