--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,6 @@ on:
         description: Optional notes for the release
         required: false
         default: ''
-  push:
-    tags:
-      - 'v*'
 
 jobs:
   build-and-release:
@@ -32,13 +29,19 @@ jobs:
       - name: Build Project
         run: npm run build
 
+      - name: Get Version from package.json
+        id: get_version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+
       - name: Zip dist Directory
         run: |
           cd dist
           zip -r ../system.zip ./*
-          cd ..
 
       - name: Update Latest Release
+        id: update_latest_release
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
@@ -51,13 +54,14 @@ jobs:
           body: ${{ github.event.inputs.release_notes }}
 
       - name: Create Version Release
+        id: create_version_release
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
-          name: Release v${{ github.ref_name }}
+          name: Release ${{ steps.get_version.outputs.version }}
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: './dist/system.json,./system.zip'
-          tag: ${{ github.ref_name }}
+          tag: ${{ steps.get_version.outputs.version }}
           body: ${{ github.event.inputs.release_notes }}
